# literate-parakeet

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/gather/: __init__.py  __main__.py
src/: main.rs
tests/: test_python.py
