[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gather"
version = "0.1.0"
description = "Fast context gathering for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
